# arcium-prediction-market

./: README.md  package.json
components/: MarketCard.tsx  Navbar.tsx
lib/server/: store.ts
lib/server/services/: dispute-engine.ts
mnt/user-data/outputs/arcium-prediction-market/: package.json
mnt/user-data/outputs/arcium-prediction-market/app/pages/create/: index.tsx
pages/: _app.tsx  index.tsx  portfolio.tsx
pages/api/disputes/[id]/: resolve.ts
pages/api/markets/: [id].ts  index.ts
pages/api/markets/[id]/: disputes.ts  index.ts
pages/api/news/: headlines.ts
pages/api/portfolio/: index.ts
pages/api/positions/: index.ts
pages/create/: index.tsx
pages/how-it-works/: index.tsx
pages/market/: [id].tsx
pages/markets/: index.tsx
programs/prediction-market/: Cargo.toml
scripts/: setup.sh
styles/: globals.css
tests/backend/unit/: dispute-engine.test.ts
utils/: api.ts  program.ts
