[package]
name = "prediction-market"
version = "0.1.0"
description = "Oracle Nexus private prediction market powered by Arcium MPC on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "prediction_market"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token"] }
arcium-sdk = { git = "https://github.com/arcium-hq/arcium-sdk", branch = "main" }
solana-program = "1.18"
bytemuck = { version = "1.14", features = ["derive"] }

